# website

./: .gitignore  Cargo.toml  README.md  Trunk.toml  default.nix  flake.nix  index.html  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
public/: style.css
public/css/: index.css
src/: index.html  lib.rs
